# asmlib-opencv

./: API.md  BuildModel.md  FAQ.md  HowtoCompile.md  ProjectHome.md  README.md  RunningDemo.md
data/: README.txt  color_asm68.model  color_asm75.model  grayall_asm.model  grey_asm.model  muct76.model
data/muct/: README.txt  genPTS.py  muct76.def  prepare.sh
data/muct/download/: README.txt
src/: CMakeLists.txt  Doxyfile.in  afreader.cpp  afreader.h  asmmodel.cpp  asmmodel.h  modelfile.cpp  modelfile.h  modelimage.cpp  modelimage.h  shapeinfo.cpp  shapeinfo.h  shapemodel.cpp  shapemodel.h  shapevec.cpp  shapevec.h  similaritytrans.cpp  similaritytrans.h  util.cpp  util.h
src/annotation/: CMakeLists.txt  annotation.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  photoview.cpp  photoview.h  pointspaint.cpp  pointspaint.h  singlephotoview.cpp  singlephotoview.h
src/demo/: CMakeLists.txt  XGetopt.h  main.cpp
src/lib/: CMakeLists.txt  afreader.cpp  asmmodel.cpp  asmmodel.h  feature_extracter_normline_noscaling.cpp  feature_extracter_normline_noscaling.h  featureextracter.cpp  featureextracter.h  modelfile.cpp  modelfile.h  modelimage.cpp  modelimage.h  shapeinfo.cpp  shapemodel.cpp  shapemodel.h  shapevec.cpp  shapevec.h  similaritytrans.cpp  similaritytrans.h
src/test/: CMakeLists.txt  XGetopt.cpp  main.cpp
