PROJECT( asmlib-opencv-test )
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
FIND_PACKAGE( OpenCV REQUIRED )
SET(TEST_SRC main.cpp XGetopt.cpp)

INCLUDE_DIRECTORIES( ${OPENCV_INCLUDE_DIR} ${CMAKE_SOURCE_DIR} )

ADD_EXECUTABLE( test ${TEST_SRC})
TARGET_LINK_LIBRARIES( test ${OPENCV_LIBRARIES} asm)
